@@ -3,6 +3,11 @@ NEWS - OpenPrinting CUPS Filters v1.12.0 - 2016-11-27
 
 CHANGES IN V1.13.0
 
+	- rastertopdf, urftopdf: As with libcupsimage from CUPS 2.2.2
+	  on rastertopdf also understands Apple Raster and much better
+	  than urftopdf does, use rastertopdf for Apple Raster
+	  (image/urf) input files then. Also allow for manually
+	  choosing by the ./configure command line.
 	- driverless: Added a CUPS backend mode to the driverless
 	  utility. Running as a CUPS backend in discovery mode it
 	  lists the IPP URIs of the suitable printers in printer setup
